--- a/CSS_Positioning/assets/css/style.css
+++ b/CSS_Positioning/assets/css/style.css
@@ -34,20 +34,26 @@ body {
     height: 600px;
     margin: 20px auto;
     border: 15px solid black;
+    position: relative;
   }
   
   /* Square 2 */
   .absolute-container {
-    position: relative;
+
   }
   
   /* Box 2 in Square 1 */
   #relative-box-2 {
     /* TODO: Set the position so it is centered in Square 1 */
+    position: relative;
+    left: 200px;
   }
   
   /* Box 2 in Square 2 */
   #absolute-box-2 {
     /* TODO: Set the position so it is outside of the upper-right corner of Square 2 */
+    position: absolute;
+    bottom: 415px;
+    left: 700px;
   }
   
